libs/node/test/data/SMSHOME2/bad/bad1.ecf
# test for unterminated comment

%comment
	OPERATORS: This is an example of using a manual
  
